--- a/file.html
+++ b/file.html
@@ -17,7 +17,13 @@
     </div>
 
      <div class="par-first">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At incidunt quibusdam expedita impedit corrupti vero autem. Aperiam dolore incidunt nobis eaque! Voluptatibus quos sed sapiente maiores quaerat saepe sit omnis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+             elit. At incidunt quibusdam expedita impedit 
+             corrupti vero autem. Aperiam dolore incidunt nobis
+              eaque! Voluptatibus quos sed sapiente maiores
+              quaerat saepe sit omnis?
+              added new messages in my paragaph.
+            </p>
      </div>
     
 </body>
